# FastAPI-3

./: .env  .gitignore  NOTE.md  README.md  generate_report.bat  generate_report.py  generate_report.sh  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_all_tests.py  run_tests.bat  test.db
app/adb/: connection.py  exceptions.py  service.py
app/api/: api_logging.py
app/api/v1/: device.py  task.py  upload.py
app/automation/: android_automation.py
app/core/: config.py  database.py  logger.py  status_code.py
app/db/: base_class.py  db_logging.py  session.py
app/models/: common.py  device.py  task.py  upload.py
app/schemas/: common.py  device.py  task.py  upload.py
app/services/: adb_transfer.py  app_lifecycle.py  automation_service.py  device.py  device_operation_service.py  garbage_cleanup.py  pending_task_scheduler.py  scheduler copy.py  scheduler.py  task.py  task_data_provider.py  task_dispatcher.py  task_executor.py  task_processor.py  task_scanner.py  task_status_manager.py  upload.py  wt_task_scheduler.py
app/utils/: file.py  log_generator.py  log_utils.py  time_utils.py
docs/: log_system.md
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_api.py  test_app_path.py  test_core_services.py  test_services.py  test_simple_models.py  test_utils.py
