[project]
name = "app-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "fastapi>=0.115.12",
    "mysql-connector-python>=9.2.0",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]
